theme: fix clear recent search button hidden under controls

--- a/Material-Ocean/user.css
+++ b/Material-Ocean/user.css
@@ -742,3 +742,8 @@ body.remotebar .view-player .player-bar-wrapper {
 .TableCellSong__label {
   color: unset !important;
 }
+
+/* margin for clear recents search button */
+button.RecentlySearched__clear-all-button.button.button-with-stroke {
+  margin-bottom: 30px;
+}
